--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,10 @@
   border: 4px solid #565758;
 }
 
+input:disabled {
+  opacity: 1 !important;
+}
+
 .container.submitted input {
   background: #3a3a3c;
 }
