fix: disable click on next attempts if current attempt is not completed

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,10 @@ input:disabled {
   opacity: 1 !important;
 }
 
+.disable-click {
+  pointer-events: none;
+}
+
 .container.submitted input {
   background: #3a3a3c;
 }
